test/spec_vectors/loop/fail/module_36.wat
(module (func $type-param-void-vs-nums (block (loop (param i32 f64) (drop) (drop)))))